--- a/assets/css/lapweb.css
+++ b/assets/css/lapweb.css
@@ -1051,7 +1051,7 @@ h5 {
 /* ----------------------------------------------------Đăng ký - Đăng nhập---------------------------------------------- */
 
 #main-sign-up {
-  height: 2930px;
+  height: 550px;
 }
 
 #wrapper{
@@ -1234,6 +1234,12 @@ h5 {
 }
 .flex.column {
   flex-direction: column;
+}
+
+.sign-up-display {
+  position: relative;
+  left: -200px;
+  width: 1700px;
 }
 /* ---------------------------------------------------Giới Thiệu------------------------------------------------------ */
 
